prevent horizontal scroll

--- a/hackrpi2024/app/globals.css
+++ b/hackrpi2024/app/globals.css
@@ -5,3 +5,6 @@
 .shimmer {
   @apply relative overflow-hidden before:absolute before:inset-0 before:-translate-x-full before:animate-[shimmer_1.5s_infinite] before:bg-gradient-to-r before:from-transparent before:via-black/10 before:to-transparent;
 }
+body {
+  overflow-x: hidden !important;
+}
